# carbon

./: CHANGELOG.md  LICENSE  README.md  builtin.cb  cabal.project  carbon.cabal  flake.nix  source.cb
app/: AST.hs  CLI.hs  Eval.hs  Main.hs  Parser.hs
examples/: closures.cb  control-flow.cb  exceptions.cb  reflection.cb  tic-tac-toe.cb  turing.cb
libs/std/: arrays.cb
src/Carbon/: AST.hs  Eval.hs  Parser.hs
std/: arrays.cb
