cabal-version:      2.4
name:               carbon
version:            0.4.3
author:             shadowninja55
maintainer:         shadowninja1050@gmail.com
homepage:           https://github.com/shadowninja55/carbon
extra-source-files: CHANGELOG.md

common base
  default-language:   GHC2021
  default-extensions:
    NoStarIsType
    BlockArguments
    LambdaCase
    LexicalNegation
    NoFieldSelectors
    OverloadedRecordDot

  build-depends:      base ^>=4.16.0.0
  ghc-options:        -Wall

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Carbon.AST
    Carbon.Eval
    Carbon.Parser

  build-depends:
    , containers            ^>=0.6.5
    , data-vector-growable  ^>=0.0.1
    , effectful
    , megaparsec            ^>=9.2.0
    , monad-loops           ^>=0.4.3
    , parser-combinators    ^>=1.3.0
    , vector                ^>=0.12.3

executable carbon
  import:         base
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Paths_carbon
  build-depends:
    , carbon
    , optparse-applicative  ^>=0.17.0
